fix auth on the web

--- a/client/src/assets/css/tailwind.css
+++ b/client/src/assets/css/tailwind.css
@@ -7,6 +7,25 @@
   --color-krio-secondary: #d7d6f5;
 }
 
+.dialog {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 9998;
+}
+
+.dialog-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10px);
+  z-index: 9997;
+}
+
 /* Базовые стили */
 body {
   height: 100vh;
